--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "npm run build && git add public/ && git commit -am \"Deploy gh-pages\" && git subtree push --prefix public origin gh-pages",
+    "deploy": "npm run build && git add build/ && git commit -am \"Deploy gh-pages\" && git subtree push --prefix public origin gh-pages",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
