--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immutability-helper": "^3.1.1",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
+    "react-canvas-confetti": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
